# hxx

./: .gitignore  README.md  demo.py  pyproject.toml  test.py  tools.py
.vntrader/: vt_setting.json
engine/: base.py  factor.py
extend/: utils.py
extend/api/: strategy_api.py
extend/core/: backtest_config.py  backtest_data.py  backtest_engine.py  backtest_logger.py  backtest_report.py  backtest_result.py
extend/data/: data_loader.py  data_source.py
output/results/: Strategy_quantstats_report_20250919_113952.html  Strategy_stats_20250919_113952.txt
script/: cn_stock_full_presistent.py  download_binance_data.py
strategy/: test.py
strategy/boost/: vip26_boost.py
strategy/trends/: vip24.py  vip24.yaml  vip24back.py  vip26 initial.py  vip26.py  vip26.yaml  vip26_bak.py
